--- a/streammers.html
+++ b/streammers.html
@@ -31,6 +31,7 @@
             <td><a href="https://www.twitch.tv/Gulycioso"> <img src="streamers/Gulycioso.png" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2"  color="white"><h3><center><p> <img src="img/smalltw.png">Gulycioso<br><img src="img/br.png">Gustavo</p></center></h3></font></td>
         </tr>
     </table>
+    ATUALIZA 
 </center>
 <p></p>
 
