--- a/contact.html
+++ b/contact.html
@@ -8,16 +8,29 @@
 </head>
 <body>
 
-<div class="div">
-<center>
-   <img width="620" height="400" class="ajuste" src="img/logo.png">
-</center>
-</div>
-<ul>
-  <li><a  href="index.html">Home</a></li>
-  <li><a href="streammers.html">Streamers</a></li>
-  <li><a class="active" href="contact.html"> Contact Us</a></li>
-</ul>
+
+  <div class="div">
+    <center>
+       <img width="620" height="400" class="ajuste" src="img/logo.png">
+    </center>
+    </div>
+    
+    <div class="OL">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li class="dropdown">
+            <a class="dropbtn" href="team.html">Teams</a>
+                <div class="dropdown-content">
+                  <a  href="streammers.html">Streamers</a>
+                  <a  href="rl.html">Rocket League</a>
+                </div>
+        </li>
+          <li><a class="active" href="contact.html"> Contact Us</a></li>
+        </ul>
+        </div>
+
+       
+
 <center>
   <h1> Contact Us</h1>
   Para nos contactar, basta mandar um e-mail  que passado alguns minutos ou questão de horas, poderemos responder!!<br>
@@ -25,5 +38,21 @@
   Nome>SeuNome | Nome de Canal> canal | Idade> idd |Follows> quantidade|
 <h1>nextsidecontactus@gmail.com</h1>
 </center>
+<div class="clr">
+  <table border="0">
+    <tr>
+    <td><img width="620" height="400" class="fundo" src="img/logo.png"></td>
+      <td>
+        <a target="_blank" title="Instagram" href="https://instagram.com/nextsideesports?utm_medium=copy_link">
+          <img src="img/icons/insta.png", width="20" height="20">Instagram
+        </a>
+        <br>
+        <a target="_blank" title="Facebook" href="https://twitter.com/NextSideEsports?t=cHu1H6V99-DVPtnJsaqvWQ&s=09">
+          <img src="img/icons/twitter.png", width="20" height="20">Twitter
+        </a>
+      </td>
+    </tr>
+  </table>
+</div>
 </body>
 </html>
