--- a/index.html
+++ b/index.html
@@ -8,16 +8,29 @@
 </head>
 <body>
 
-<div class="div">
-<center>
-   <img width="620" height="400" class="ajuste" src="img/logo.png">
-</center>
-</div>
-<ul>
-  <li><a class="active" href="index.html">Home</a></li>
-  <li><a href="streammers.html">Streamers</a></li>
-  <li><a href="contact.html"> Contact Us</a></li>
-</ul>
+
+  <div class="div">
+    <center>
+       <img width="620" height="400" class="ajuste" src="img/logo.png">
+    </center>
+    </div>
+    
+    <div class="OL">
+        <ul>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li class="dropdown">
+            <a  class="dropbtn" href="team.html">Teams</a>
+                <div class="dropdown-content">
+                  <a  href="streammers.html">Streamers</a>
+                  <a  href="rl.html">Rocket League</a>
+                </div>
+        </li>
+          <li><a href="contact.html"> Contact Us</a></li>
+        </ul>
+        </div>
+
+       
+
 <center>
   <h1>Olá!</h1>
 
@@ -27,13 +40,25 @@
 </center>
 <div>
   <center>
-  <h1>Teams</h1>
-  <FONT color="purple">
-  <a href="streammers.html"><img src="img/botaostreamer.png" alt="streamers" class="tam4" width="600" height="150"></a>
-  <!-- <a href="streammers.html"><img src="img/brevemente.png" alt="BREVE" class="tam4" width="600" height="150"></a>
-  <a href="streammers.html"><img src="img/brevemente.png" alt="BREVE" class="tam4" width="600" height="150"></a> -->
-  </FONT>
+  <h1>Nosso Discord</h1>
+  <iframe src="https://discord.com/widget?id=898983358099517440&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
   </center>
+  <div class="clr">
+    <table border="0">
+      <tr>
+      <td><img width="620" height="400" class="fundo" src="img/logo.png"></td>
+        <td>
+          <a target="_blank" title="Instagram" href="https://instagram.com/nextsideesports?utm_medium=copy_link">
+            <img src="img/icons/insta.png", width="20" height="20">Instagram
+          </a>
+          <br>
+          <a target="_blank" title="Facebook" href="https://twitter.com/NextSideEsports?t=cHu1H6V99-DVPtnJsaqvWQ&s=09">
+            <img src="img/icons/twitter.png", width="20" height="20">Twitter
+          </a>
+        </td>
+      </tr>
+    </table>
+  </div>
 </div>
 </body>
 </html>
