--- a/team.html
+++ b/team.html
@@ -22,6 +22,7 @@
                 <div class="dropdown-content">
                   <a  href="streammers.html">Streamers</a>
                   <a  href="rl.html">Rocket League</a>
+                  <a  href="fifa.html">Fifa</a>
                 </div>
         </li>
           <li><a href="contact.html"> Contact Us</a></li>
