--- a/fifa.html
+++ b/fifa.html
@@ -21,8 +21,8 @@
         <a class="active" class="dropbtn" href="team.html">Teams</a>
             <div class="dropdown-content">
               <a href="streammers.html">Streamers</a>
-              <a class="active" href="rl.html">Rocket League</a>
-              <a  href="fifa.html">Fifa</a>
+              <a  href="rl.html">Rocket League</a>
+              <a class="active" href="fifa.html">Fifa</a>
             </div>
     </li>
       <li><a href="contact.html"> Contact Us</a></li>
@@ -30,10 +30,10 @@
     </div>
 
 <center>
-    <h2>Rocket League Team</h2>
+    <h2>Fifa Team</h2>
     <table class="responsive3" align="center">
         <tr bgcolor="#1C1C1C">
-            <td><a href="https://www.twitch.tv/p1nhofx"> <img src="streamers/LogoP1nho.png" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2" color="white"><h3><center><p></p> <img src="img/smalltw.png">P1nhoFX<br><img src="img/pt.gif">Paulo Pinho</p></center></h3></font></td>
+            <td><!--<a href="https://www.twitch.tv/p1nhofx">--><img src="img/nofoto.jpg" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2" color="white"><h3><center><p></p><!-- <img src="img/smalltw.png">leo--><br><img src="img/pt.gif">Leo Foncesa</p></center></h3></font></td>
         </tr>
   <!-- <tr bgcolor="#1C1C1C">
         </tr>-->
