--- a/fifa.html
+++ b/fifa.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Rocket League|NextSide</title>
+    <title>Fifa|NextSide</title>
     <link rel="shortcut icon" href="img/icon.png">
     <link rel="stylesheet" type="text/css" href="css/Navg/navegacao.css">
     <link rel="stylesheet" type="text/css" href="css/Navg/img.css">
@@ -33,7 +33,7 @@
     <h2>Fifa Team</h2>
     <table class="responsive3" align="center">
         <tr bgcolor="#1C1C1C">
-            <td><!--<a href="https://www.twitch.tv/p1nhofx">--><img src="img/nofoto.jpg" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2" color="white"><h3><center><p></p><!-- <img src="img/smalltw.png">leo--><br><img src="img/pt.gif">Leo Foncesa</p></center></h3></font></td>
+            <td><a href=""><img src="img/nofoto.jpg" class="tam" width="400" height="400"><!--</a>--><font size="4" align="center" class="responsive2" color="white"><h3><center><p></p><!-- <img src="img/smalltw.png">leo--><br><img src="img/pt.gif">Leo Foncesa</p></center></h3></font></td>
         </tr>
   <!-- <tr bgcolor="#1C1C1C">
         </tr>-->
