--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <title>Contact US|NextSide</title>
     <link rel="shortcut icon" href="img/icon.png">
+    <link rel="stylesheet" type="text/css" href="css/Navg/Animacoes.css">
     <link rel="stylesheet" type="text/css" href="css/Navg/navegacao.css">
     <link rel="stylesheet" type="text/css" href="css/Navg/img.css">
 </head>
@@ -15,7 +16,7 @@
     </center>
     </div>
     
-    <div class="OL">
+    <div class="a">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li class="dropdown">
