--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Home|NextSide</title>
     <link rel="shortcut icon" href="img/icon.png">
+    <link rel="stylesheet" type="text/css" href="css/Navg/Animacoes.css">
     <link rel="stylesheet" type="text/css" href="css/Navg/navegacao.css">
     <link rel="stylesheet" type="text/css" href="css/Navg/img.css">
 </head>
@@ -15,7 +16,7 @@
     </center>
     </div>
     
-    <div class="OL">
+    <div class="a">
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
           <li class="dropdown">
@@ -33,7 +34,9 @@
        
 
 <center>
+  <div class="Aparecer">
   <h1>Olá!</h1>
+  </div>
 
   Seja bem vindo a comunidade <b>NextSide</b>, uma comunidade criada para ajudar streamers, e criar laços entre os mesmos.<br>
   Somos uma comunidade nova, fundada a 07/10/2021 em que tentamos sempre ajudar quem precisa e somos uma comunidade unida!<br>
@@ -44,6 +47,11 @@
   <h1>Nosso Discord</h1>
   <iframe src="https://discord.com/widget?id=898983358099517440&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
   </center>
+
+
+
+
+  
   <div class="clr">
     <table border="0">
       <tr>
