--- a/fifa.html
+++ b/fifa.html
@@ -3,6 +3,7 @@
 <head>
     <title>Fifa|NextSide</title>
     <link rel="shortcut icon" href="img/icon.png">
+    <link rel="stylesheet" type="text/css" href="css/Navg/Animacoes.css">
     <link rel="stylesheet" type="text/css" href="css/Navg/navegacao.css">
     <link rel="stylesheet" type="text/css" href="css/Navg/img.css">
 </head>
@@ -14,7 +15,7 @@
 </center>
 </div>
 
-<div class="OL">
+<div class="a">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li class="dropdown">
@@ -30,6 +31,9 @@
     </div>
 
 <center>
+  <div class="Aparecer">
+
+
     <h2>Fifa Team</h2>
     <table class="responsive3" align="center">
         <tr bgcolor="#1C1C1C">
@@ -39,7 +43,11 @@
         </tr>-->
     </table>
     <a href="team.html" class="responsive3"><h3> Voltar</h3></a>
+
+  </div>
 </center>
+
+
 <p></p>
 <div class="clr">
     <table border="0">
