--- a/Val.html
+++ b/Val.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Fifa|NextSide</title>
+    <title>Rocket League|NextSide</title>
     <link rel="shortcut icon" href="img/icon.png">
     <link rel="stylesheet" type="text/css" href="css/Navg/Animacoes.css">
     <link rel="stylesheet" type="text/css" href="css/Navg/navegacao.css">
@@ -22,9 +22,9 @@
         <a class="active" class="dropbtn" href="team.html">Teams</a>
             <div class="dropdown-content">
               <a href="streammers.html">Streamers</a>
-              <a  href="rl.html">Rocket League</a>
-              <a class="active" href="fifa.html">Fifa</a>
-              <a  href="Val.html">Valorant</a>
+              <a href="rl.html">Rocket League</a>
+              <a href="fifa.html">Fifa</a>
+              <a class="active" href="Val.html">Valorant</a>
             </div>
     </li>
       <li><a href="contact.html"> Contact Us</a></li>
@@ -34,19 +34,20 @@
 <center>
   <div class="Aparecer">
 
+    <h2>Valorant Team</h2>
 
-    <h2>Fifa Team</h2>
     <table class="responsive3" align="center">
         <tr bgcolor="#1C1C1C">
-            <td><a href=""><img src="img/nofoto.jpg" class="tam" width="400" height="400"><!--</a>--><font size="4" align="center" class="responsive2" color="white"><h3><center><p></p><!-- <img src="img/smalltw.png">leo--><br><img src="img/pt.gif">Leo Foncesa</p></center></h3></font></td>
+            <td><a href="" ><img src="imgValorantTeam/9e835fe6c6bd15f1b8e62988df7ba562.jpg" class="tam" width="600" height="600"></a><font size="4" align="center" class="responsive2" color="white"><h3><center><p></p> <!--<img src="img/smalltw.png">P1nhoFX<br>--><img src="img/pt.gif">Inês Silva<p></p></center></h3></font></td>
+            <td><a href="https://www.twitch.tv/dredlokooo"> <img src="streamers/dred.jpg" class="tam" width="600" height="600"></a><font size="4" align="center" class="responsive2" color="white"><h3><center><p> <img src="img/smalltw.png">DredLokooo<br><img src="img/pt.gif">Francisco Melo</p></center></h3></font></td>
         </tr>
+
   <!-- <tr bgcolor="#1C1C1C">
         </tr>-->
     </table>
-  </div>
+
+    </div>
 </center>
-
-
 <p></p>
 <div class="clr">
     <table border="0">
