--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
                   <a  href="streammers.html">Streamers</a>
                   <a  href="rl.html">Rocket League</a>
                   <a  href="fifa.html">Fifa</a>
+                  <a  href="Val.html">Valorant</a>
                 </div>
         </li>
           <li><a class="active" href="contact.html"> Contact Us</a></li>
@@ -36,9 +37,7 @@
 <center>
   <h1> Contact Us</h1>
   Para nos contactar, basta mandar um e-mail  que passado alguns minutos ou questão de horas, poderemos responder!!<br>
-  Caso queiram entrar para a equipa de stream, basta mandar a um email a pedir, com os seguintes dados.<br>
-  Nome>SeuNome | Nome de Canal> canal | Idade> idd |Follows> quantidade|
-<h1>nextsidecontactus@gmail.com</h1>
+  <h1>nextsidecontactus@gmail.com</h1>
 </center>
 <div class="clr">
   <table border="0">
