--- a/rl.html
+++ b/rl.html
@@ -24,6 +24,7 @@
               <a href="streammers.html">Streamers</a>
               <a class="active" href="rl.html">Rocket League</a>
               <a  href="fifa.html">Fifa</a>
+              <a  href="Val.html">Valorant</a>
             </div>
     </li>
       <li><a href="contact.html"> Contact Us</a></li>
@@ -41,7 +42,6 @@
   <!-- <tr bgcolor="#1C1C1C">
         </tr>-->
     </table>
-    <a href="team.html" class="responsive3"><h3> Voltar</h3></a>
 
     </div>
 </center>
