--- a/team.html
+++ b/team.html
@@ -24,6 +24,7 @@
                   <a  href="streammers.html">Streamers</a>
                   <a  href="rl.html">Rocket League</a>
                   <a  href="fifa.html">Fifa</a>
+                  <a  href="Val.html">Valorant</a>
                 </div>
         </li>
           <li><a href="contact.html"> Contact Us</a></li>
@@ -37,14 +38,33 @@
     <h1>Teams</h1>
     Nossas equipas iniciais de ESPORTS iniciaram primeiramente pelo rocket league e Fifa. Estamos a procura de malta para se juntar a equipas de <b>CS:GO - Valorant </b> quem quiser se juntar, bastas mandar um email a falar sobre a sua experiencia, quantos anos de jogo e sua idade e claro referir a qual equipa se quer juntar.
 <p>
-    <FONT color="purple">
-      <a href="streammers.html"><img src="img/botaostreamer.png" alt="streamers" class="tam4" width="600" height="150"></a>
-      <a href="rl.html"><img src="img/BotaoRL.png" alt="SideTeam" class="tam4" width="600" height="150"></a>
-      <!-- <a href="streammers.html"><img src="img/brevemente.png" alt="BREVE" class="tam4" width="600" height="150"></a> -->
-      </FONT>
-      
+
+  <h1>Jersey NextSide</h1>
+    <img src="ImgFyerCamisola/JerseyCamisolaFF.png" class="slide" width="300" height="450" />
+    <img src="ImgFyerCamisola/JerseyCamisolaRL.png" class="slide" width="300" height="450" />
+   <!--<img src="ImgFyerCamisola/JerseyCamisolaRL.png" class="slide" width="300" height="450" />-->
+
+
+
+
+
+
+<p>
+
+</p>
+
+
+
+
+
+
+
+
+
+
+
+  
     
-    </div>
   </center>
 
 
