--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                   <a  href="streammers.html">Streamers</a>
                   <a  href="rl.html">Rocket League</a>
                   <a  href="fifa.html">Fifa</a>
+                  <a  href="Val.html">Valorant</a>
                 </div>
         </li>
           <li><a href="contact.html"> Contact Us</a></li>
