--- a/streammers.html
+++ b/streammers.html
@@ -24,6 +24,7 @@
                   <a class="active" href="streammers.html">Streamers</a>
                   <a  href="rl.html">Rocket League</a>
                   <a  href="fifa.html">Fifa</a>
+                  <a  href="Val.html">Valorant</a>
                 </div>
         </li>
           <li><a href="contact.html"> Contact Us</a></li>
@@ -32,6 +33,7 @@
     
   <center>
     <div class="Aparecer">
+      <h2>Streamers</h2>
     <table class="responsive3" align="center">
         <tr bgcolor="#1C1C1C">
             <td><a href="https://www.twitch.tv/p1nhofx"> <img src="streamers/LogoP1nho.png" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2" color="white"><h3><center><p></p> <img src="img/smalltw.png">P1nhoFX<br><img src="img/pt.gif">Paulo Pinho</p></center></h3></font></td>
@@ -42,7 +44,7 @@
             <td><a href="https://www.twitch.tv/Gulycioso"> <img src="streamers/Gulycioso.png" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2"  color="white"><h3><center><p> <img src="img/smalltw.png">Gulycioso<br><img src="img/br.png">Gustavo</p></center></h3></font></td>
         </tr>
     </table>
-    <a href="team.html" class="responsive3"><h3> Voltar</h3></a>
+
   </div>
       
 </center>
