--- a/Val.html
+++ b/Val.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Rocket League|NextSide</title>
+    <title>Valorant|NextSide</title>
     <link rel="shortcut icon" href="img/icon.png">
     <link rel="stylesheet" type="text/css" href="css/Navg/Animacoes.css">
     <link rel="stylesheet" type="text/css" href="css/Navg/navegacao.css">
