--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
       <iframe src="https://discord.com/widget?id=898983358099517440&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     </td>
       <td>
-        <h1>Nosso Instagram</h1>
-        <iframe src="https://www.instagram.com/p/CVU6SpDr10e/" width="400" height="480" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
+        <a href="https://www.instagram.com/p/CVU6SpDr10e/"><h1>Nosso Instagram</h1></a>
+        <!-- SnapWidget -->
+<iframe src="https://snapwidget.com/embed/969111" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:500px; height:500px"></iframe>
       </td>
     
     
