--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                   <a  href="rl.html">Rocket League</a>
                   <a  href="fifa.html">Fifa</a>
                   <a  href="Val.html">Valorant</a>
+                </div>
+          </li>
+          <li><a href="contact.html"> Contact Us</a></li>
         </ul>
         </div>
 
