--- a/fifa.html
+++ b/fifa.html
@@ -38,7 +38,7 @@
     <h2>Fifa Team</h2>
     <table class="responsive3" align="center">
         <tr bgcolor="#1C1C1C">
-            <td><a href=""><img src="ImgFifaTeam/leo.png" class="tam" width="400" height="400"><!--</a>--><font size="4" align="center" class="responsive2" color="white"><h3><center><!-- <p></p><img src="img/smalltw.png">leo--><br><img src="img/pt.gif">Leo Foncesa</p></center></h3></font></td>
+            <td><a href=""><img src="ImgFifaTeam/leo.png" class="tam" width="400" height="400"><!--</a>--><font size="4" align="center" class="responsive2" color="white"><h3><center><!-- <p></p><img src="img/smalltw.png">leo--><br><img src="img/pt.gif">Leo Fonseca</p></center></h3></font></td>
         </tr>
   <!-- <tr bgcolor="#1C1C1C">
         </tr>-->
