--- a/Val.html
+++ b/Val.html
@@ -39,7 +39,7 @@
     <table class="responsive3" align="center">
         <tr bgcolor="#1C1C1C">
             <td><a href="" ><img src="imgValorantTeam/9e835fe6c6bd15f1b8e62988df7ba562.jpg" class="tam" width="600" height="600"></a><font size="4" align="center" class="responsive2" color="white"><h3><center><p></p> <!--<img src="img/smalltw.png">P1nhoFX<br>--><img src="img/pt.gif">Inês Silva<p></p></center></h3></font></td>
-            <td><a href="https://www.twitch.tv/dredlokooo"> <img src="streamers/dred.jpg" class="tam" width="600" height="600"></a><font size="4" align="center" class="responsive2" color="white"><h3><center><p> <img src="img/smalltw.png">DredLokooo<br><img src="img/pt.gif">Francisco Melo</p></center></h3></font></td>
+            <td><a href="" ><img src="imgValorantTeam/9e835fe6c6bd15f1b8e62988df7ba562.jpg" class="tam" width="600" height="600"></a><font size="4" align="center" class="responsive2" color="white"><h3><center><p></p> <!--<img src="img/smalltw.png">P1nhoFX<br>--><img src="img/pt.gif">Paulo Carvalho<p></p></center></h3></font></td>
         </tr>
 
   <!-- <tr bgcolor="#1C1C1C">
