--- a/cs.html
+++ b/cs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Rocket League|NextSide</title>
+    <title>CS:GO|NextSide</title>
     <link rel="shortcut icon" href="img/icon.png">
     <link rel="stylesheet" type="text/css" href="css/Navg/Animacoes.css">
     <link rel="stylesheet" type="text/css" href="css/Navg/navegacao.css">
@@ -22,10 +22,10 @@
         <a class="active" class="dropbtn" href="team.html">Teams</a>
             <div class="dropdown-content">
               <a href="streammers.html">Streamers</a>
-              <a class="active" href="rl.html">Rocket League</a>
-              <a  href="fifa.html">Fifa</a>
-              <a  href="Val.html">Valorant</a>
-              <a  href="cs.html">CS:GO</a>
+              <a href="rl.html">Rocket League</a>
+              <a href="fifa.html">Fifa</a>
+              <a href="Val.html">Valorant</a>
+              <a class="active" href="cs.html">CS:GO</a>
             </div>
     </li>
       <li><a href="contact.html"> Contact Us</a></li>
@@ -35,12 +35,15 @@
 <center>
   <div class="Aparecer">
 
-    <h2>Rocket League Team</h2>
+    <h2>Valorant Team</h2>
+
     <table class="responsive3" align="center">
-        <tr bgcolor="#1C1C1C">  
-          <td><a href="https://www.twitch.tv/p1nhofx"> <img src="streamers/LogoP1nho.png" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2" color="white"><h3><center><p></p> <img src="img/smalltw.png">P1nhoFX<br><img src="img/pt.gif">Paulo Pinho</p></center></h3></font></td>
-          <td><a href="https://www.twitch.tv/tomasdoshow"> <img src="streamers/TomasSantos.png" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2"  color="white"><h3><center><p> <img src="img/smalltw.png">tomasdoshow<br><img src="img/pt.gif">Tomás Santos</p></center></h3></font></td>
+        <tr bgcolor="#1C1C1C">
+          <td><a href="https://www.twitch.tv/dredlokooo"> <img src="streamers/dred.jpg" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2" color="white"><h3><center><p> <img src="img/smalltw.png">DredLokooo<br><img src="img/pt.gif">Francisco Melo</p></center></h3></font></td>
+          <td><a href="https://www.twitch.tv/dredlokooo"> <img src="img/nofoto.jpg" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2" color="white"><h3><center><p> <!--<img src="img/smalltw.png">-->PrimZ<br><img src="img/pt.gif">Joao Sousa</p></center></h3></font></td>
         </tr>
+        
+
   <!-- <tr bgcolor="#1C1C1C">
         </tr>-->
     </table>
