--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                   <a  href="rl.html">Rocket League</a>
                   <a  href="fifa.html">Fifa</a>
                   <a  href="Val.html">Valorant</a>
+                  <a  href="cs.html">CS:GO</a>
                 </div>
           </li>
           <li><a href="contact.html"> Contact Us</a></li>
