--- a/streammers.html
+++ b/streammers.html
@@ -25,6 +25,7 @@
                   <a  href="rl.html">Rocket League</a>
                   <a  href="fifa.html">Fifa</a>
                   <a  href="Val.html">Valorant</a>
+                  <a  href="cs.html">CS:GO</a>
                 </div>
         </li>
           <li><a href="contact.html"> Contact Us</a></li>
@@ -39,10 +40,14 @@
             <td><a href="https://www.twitch.tv/p1nhofx"> <img src="streamers/LogoP1nho.png" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2" color="white"><h3><center><p></p> <img src="img/smalltw.png">P1nhoFX<br><img src="img/pt.gif">Paulo Pinho</p></center></h3></font></td>
             <td><a href="https://www.twitch.tv/dredlokooo"> <img src="streamers/dred.jpg" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2" color="white"><h3><center><p> <img src="img/smalltw.png">DredLokooo<br><img src="img/pt.gif">Francisco Melo</p></center></h3></font></td>
         </tr>
-            <tr bgcolor="#1C1C1C">
+          <tr bgcolor="#1C1C1C">
             <td><a href="https://www.twitch.tv/pipsalex"> <img src="streamers/pips.jpg" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2"  color="white"><h3><center><p> <img src="img/smalltw.png">Pipsalex<br><img src="img/pt.gif">Filipe Cruz</p></center></h3></font></td>
             <td><a href="https://www.twitch.tv/Gulycioso"> <img src="streamers/Gulycioso.png" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2"  color="white"><h3><center><p> <img src="img/smalltw.png">Gulycioso<br><img src="img/br.png">Gustavo</p></center></h3></font></td>
         </tr>
+        <tr bgcolor="#1C1C1C">
+          <td><a href="https://www.twitch.tv/tomasdoshow"> <img src="streamers/TomasSantos.png" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2"  color="white"><h3><center><p> <img src="img/smalltw.png">tomasdoshow<br><img src="img/pt.gif">Tomás Santos</p></center></h3></font></td>
+          
+      </tr>
     </table>
 
   </div>
