--- a/cs.html
+++ b/cs.html
@@ -35,7 +35,7 @@
 <center>
   <div class="Aparecer">
 
-    <h2>Valorant Team</h2>
+    <h2>CS:GO Team</h2>
 
     <table class="responsive3" align="center">
         <tr bgcolor="#1C1C1C">
