--- a/cs.html
+++ b/cs.html
@@ -29,6 +29,11 @@
             </div>
     </li>
       <li><a href="contact.html"> Contact Us</a></li>
+     <!-- <div class="MenuEsquerdo">
+        <li>
+          <img src="TeamLogos/NS.png" width="57">
+        </li>
+      </div>-->
     </ul>
     </div>
 
