--- a/rl.html
+++ b/rl.html
@@ -11,7 +11,7 @@
 
 <div class="div">
 <center>
-   <img width="620" height="400" class="ajuste" src="img/logo.png">
+   <img width="620" height="400" class="ajuste slide-top" src="img/logo.png">
 </center>
 </div>
 
