--- a/rl.html
+++ b/rl.html
@@ -39,7 +39,7 @@
     <table class="responsive3" align="center">
         <tr bgcolor="#1C1C1C">  
           <td><a href="https://www.twitch.tv/p1nhofx"> <img src="streamers/LogoP1nho.png" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2" color="white"><h3><center><p></p> <img src="img/smalltw.png">P1nhoFX<br><img src="img/pt.gif">Paulo Pinho</p></center></h3></font></td>
-          <td><a href="https://www.twitch.tv/tomasdoshow"> <img src="streamers/TomasSantos.png" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2"  color="white"><h3><center><p> <img src="img/smalltw.png">tomasdoshow<br><img src="img/pt.gif">Tomás Santos</p></center></h3></font></td>
+          <!-- <td><a href="https://www.twitch.tv/tomasdoshow"> <img src="streamers/TomasSantos.png" class="tam" width="400" height="400"></a><font size="4" align="center" class="responsive2"  color="white"><h3><center><p> <img src="img/smalltw.png">tomasdoshow<br><img src="img/pt.gif">Tomás Santos</p></center></h3></font></td> -->
         </tr>
   <!-- <tr bgcolor="#1C1C1C">
         </tr>-->
